fixed registration page

--- a/index.html
+++ b/index.html
@@ -179,7 +179,10 @@
                 <div class="modal-dialog text-dark ">
                   <div class="modal-content">
                     <div class="modal-header">
-                      <h5 class="modal-title" id="staticBackdropLabel">
+                      <h5
+                        class="modal-title text-bold text-sm-center text-sm-center "
+                        id="staticBackdropLabel"
+                      >
                         Guidelines for PCCOE ACM - Hacktoberfest 2023
                       </h5>
                       <button
@@ -192,8 +195,28 @@
                       </button>
                     </div>
                     <div class="modal-body text-dark ">
-                       Two-step registration process ensures convenience and
-                      flexibility
+                      <h6 class="text-center"  >
+                        Follow the Three-step registration process by Clicking
+                        the Register Button
+                      </h6>
+                      <br />
+                      Three-step registration process ensures convenience and
+                      flexibility :- 1. Google Form :- Fill out a Google Form to
+                      express your interest and provide basic information.
+                      <br/> 
+                      2. Github - Hacktoberfest Authorization : Registration on
+                      official website of Hacktoberfest 
+                      <br/> 3. PCCOE-ACM-HACKTOBERFEST-2023 : Complete the official
+                      registration on our event website for seamless access to
+                      event updates and resources.
+                      <br />
+
+                      Strictly Follow the Hacktoberfest Code of Conduct .
+                      <br />
+                      <h7 class="text-center"
+                        >Eager to See you at the Event .
+                      </h7>
+                      <br />
                     </div>
                     <div class="modal-footer">
                       <button
@@ -203,7 +226,11 @@
                       >
                         Close
                       </button>
-                      <button type="button" class="btn btn-primary">
+                      <button
+                        type="button"
+                        data-dismiss="modal"
+                        class="btn btn-primary"
+                      >
                         Understood
                       </button>
                     </div>
@@ -242,7 +269,7 @@
                 type="button"
                 class="btn mb-4  btn-lg download-button btndesign animate__animated animate__backInLeft "
               >
-                REGISTER
+                REGISTER NOW !
               </button>
             </a>
           </div>
@@ -252,12 +279,12 @@
           <div class="col-lg-6 col-md-12 my-auto">
             <div class="cover mb-4 ">
               <!-- <img
-                        id="logo1"
-                        class="animate__animated animate__animate__animate__flipOutX"
-                        src="images/17-Oct to 31-Oct 2023.png"
-                        alt="Logo"
-                        height="300"
-                      /> -->
+                            id="logo1"
+                            class="animate__animated animate__animate__animate__flipOutX"
+                            src="images/17-Oct to 31-Oct 2023.png"
+                            alt="Logo"
+                            height="300"
+                          /> -->
               <div class="Intro">
                 <video width="400" height="250" autoplay controls>
                   <source src="THIS OCTOBER.mp4" type="video/mp4" />
@@ -278,7 +305,7 @@
 
     <section class="timeline " id="timeline">
       <h2 class="text-white global-one ">Timeline | Schedule for the Event</h2>
-      <h1 class="text-center text-white">Day- 1</h1>
+      <h1 class="text-center" style="color:#b2db1c;">Day- 1</h1>
       <h2 class="text-center text-white mt-2 global-two ">
         Date 19 Oct - 2023
       </h2>
@@ -294,7 +321,10 @@
             11:00 AM to 11:15 AM
           </div>
           <div class="timeline__event__content ">
-            <div class="timeline__event__title  text-center mb-2">
+            <div
+              class="timeline__event__title time-title text-center mb-2"
+              style=" color:#065F9F;"
+            >
               Welcome Address
             </div>
             <div class="timeline__event__description">
@@ -315,7 +345,10 @@
             11:15 AM to 11:30 AM
           </div>
           <div class="timeline__event__content">
-            <div class="timeline__event__title  text-center mb-2">
+            <div
+              class="timeline__event__title  text-center mb-2"
+              style=" color:#065F9F;"
+            >
               Introduction to Hacktoberfest & Opensource
             </div>
             <div class="timeline__event__description">
@@ -336,7 +369,10 @@
             11:30 AM to 12:00PM
           </div>
           <div class="timeline__event__content">
-            <div class="timeline__event__title  text-center mb-2">
+            <div
+              class="timeline__event__title  text-center mb-2"
+              style=" color:#065F9F;"
+            >
               Workshop for Opensource Contribution
             </div>
             <div class="timeline__event__description">
@@ -351,9 +387,9 @@
             </div>
           </div>
         </div>
-        <h1 class="text-center text-white">Day- 2</h1>
+        <h1 class="text-center " style=" color:#b6e01b;">Day- 2</h1>
         <h2 class="text-center text-white mt-2 global-two ">
-          Date 19 Oct - 2023
+          Date 20 Oct - 2023
         </h2>
 
         <div class="timeline__event c4 ">
@@ -372,7 +408,10 @@
             </a>
           </div>
           <div class="timeline__event__content">
-            <div class="timeline__event__title text-center mb-2 ">
+            <div
+              class="timeline__event__title text-center mb-2 "
+              style=" color:#065F9F;"
+            >
               Opportunities to contribute
             </div>
             <div class="timeline__event__description">
@@ -398,7 +437,10 @@
             12:30 PM to 01:30 PM
           </div>
           <div class="timeline__event__content ">
-            <div class="timeline__event__title  text-center mb-2">
+            <div
+              class="timeline__event__title  text-center mb-2"
+              style=" color:#065F9F;"
+            >
               Breakout Rooms for Icebreaking
             </div>
             <div class="timeline__event__description">
@@ -420,10 +462,13 @@
             01:30 PM to 03:30 PM
           </div>
           <div class="timeline__event__content ">
-            <div class="timeline__event__title  text-center mb-2">
+            <div
+              class="timeline__event__title  text-center mb-2"
+              style=" color:#065F9F;"
+            >
               Get Hacking
             </div>
-            <div class="timeline__event__description">
+            <div class="timeline__event__description" style=" color:#065F9F;">
               <p>
                 👉 Now it's time to put your skills to use.<br />
                 👉 Work on your selected open source project, and remember to
@@ -442,7 +487,10 @@
             03:30 PM to 04:00 PM
           </div>
           <div class="timeline__event__content ">
-            <div class="timeline__event__title  text-center mb-2">
+            <div
+              class="timeline__event__title  text-center mb-2"
+              style=" color:#065F9F;"
+            >
               Show and Tell
             </div>
             <div class="timeline__event__description">
@@ -462,24 +510,24 @@
     <!-- opportunities area for the students -->
 
     <!-- <section id="schedule "  >
-              <h2
-                
-              >
-                <center class="global-one  " >Opportunites for Students</center>
-              </h2>
-              <h4>
-                <center>
-                  <a href="project.html">
-                    <button
-                      type="button"
-                      class="btn mb-4  btn-lg download-button btndesign  animate__animated animate__backInLeft "
-                    >
-                      View Projects
-                    </button>
-                  </a>
-                </center>
-              </h4>
-            </section> -->
+                  <h2
+                    
+                  >
+                    <center class="global-one  " >Opportunites for Students</center>
+                  </h2>
+                  <h4>
+                    <center>
+                      <a href="project.html">
+                        <button
+                          type="button"
+                          class="btn mb-4  btn-lg download-button btndesign  animate__animated animate__backInLeft "
+                        >
+                          View Projects
+                        </button>
+                      </a>
+                    </center>
+                  </h4>
+                </section> -->
 
     <!-- Fest Info -->
 
