--- a/project.html
+++ b/project.html
@@ -144,13 +144,12 @@
                   >
                     <span class="navbar-toggler-icon"></span>
                   </button>
-                  <div class="collapse mt-5 h-50 mb-3 h-md-100 navbar-collapse global-one-nav " id="navbarSupportedContent" >
-                    <ul class="navbar-nav mt-auto mb-5  ">
+                  <div class="collapse  h-50  h-md-100 navbar-collapse  global-one-nav " id="navbarSupportedContent" >
+                    <ul class="navbar-nav mt-auto d-flex justify-center content-center ">
                       <li class="nav-item">
                         <a
                           class="nav-link"
                           href="index.html"
-                          target="_blank"
                           data-aos=""
                           >Home</a
                         >
@@ -159,7 +158,6 @@
                         <a
                           class="nav-link border:1px "
                           href="https://hacktoberfest.com/participation/"
-                          target="_blank"
                           data-aos=""
                         
                           >Participation</a
@@ -172,7 +170,7 @@
                       </li> -->
                       <li class="nav-item">
                         <a class="nav-link" data-aos="fade-down" href="https://drive.google.com/file/d/1gF-YRQKARvq_ZPT05OnJMiqN4-XkExqa/view?usp=sharing"
-                          >Git-Cheat-Sheet</a
+                          >Git Cheat Sheet</a
                         >
                       </li>
                       <li class="nav-item">
