fix ml-5 on projects-hack page

--- a/hackprojects.html
+++ b/hackprojects.html
@@ -535,7 +535,7 @@
 
     <!-- Global stats -->
 
-    <section id="global-stats" class="ml-5">
+    <section id="global-stats">
       <h3 class="global-stats-header mt-5 mb-3 global-one">
         Global stats for PCCOE - ACM | Hacktoberfest 2023
       </h3>
