--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="icon" type="image/png" href="images/hack.png" />
 
     <!--Google fonts-->
+        
+
     <link
       href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap"
       rel="stylesheet"
@@ -608,6 +610,8 @@ Git-Github hands-on workshop
 
 
       <!-- adding the script for animation -->
+      <script src="index.js"></script>
+
     <script>
       AOS.init();
     </script>
