added h1 tag for gsoc imp

--- a/index.html
+++ b/index.html
@@ -443,6 +443,7 @@ Git-Github hands-on workshop
       </div>
     </section>
     <h2 class="text-white text-center ">Contributions can be made upto 31st october-2023</h2>
+    <h1 class="text-white text-center ">Making you all ready for Upcoming GSOC - 2024 </h1>
 
     <!-- Timeline ends -->
 
