--- a/register.html
+++ b/register.html
@@ -259,7 +259,7 @@
                         STEP - 2
                     </div>
                 </li>
-                <li class="life_event active">
+                <!-- <li class="life_event active">
                     <div class="event_icn"><i class="fa fa-code"></i></div>
                     <div class="event_content">
                         <h3 class="text-center " > <a class=" google-btn" href=""> Register</a></h3>
@@ -273,7 +273,7 @@
                     <div class="event_date">
                         STEP - 3 
                     </div>
-                </li>
+                </li> -->
             <li class="work_event active">
                     <div class="event_icn "><i class="fa fa-check"></i></div>
                     <div class="event_content">
@@ -287,7 +287,7 @@
                         </p>
                     </div>
                     <div class="event_date">
-                        Step - 4 
+                        Love You ❤
                     </div>
                 </li>
                 </ul>
