--- a/hackprojects.html
+++ b/hackprojects.html
@@ -35,6 +35,8 @@
 
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/project.css" />
+    
+
 
     <!--Font Awesome-->
     <script
@@ -61,12 +63,11 @@
       crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" href="css/hackprojects.css" />
 
     <!-- adding the animation -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
+    <link rel="stylesheet" href="css/hackprojects.css" />
     <title>Projects | PCCOE | ACM - HacktoberFest-2023</title>
   </head>
 
@@ -196,7 +197,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-aos="fade-down" href="#cta">Join</a>
+                <a class="nav-link" data-aos="fade-down" href="#Certificate">Certificate</a>
               </li>
             </ul>
           </div>
@@ -492,9 +493,11 @@
     <!-- Advantages of participation -->
    
     <!-- Advantage section ends here -->
-    <!-- Call to Action -->
+
    
-    <h1 class="text-white text-center">WinningEdge</h1>
+    <h1 class="text-white text-center" id="Certificate" >WinningEdge</h1>
+    <h2 class="text-white">Participate and win these exciting goodies along with participation certificate!!</h2>
+
     <div class="prizes_container">
       <div class="certificate_container">
         <div class="certificate"><img src="images/Certificate.jpg" alt="certificate"></div>
@@ -504,15 +507,15 @@
         <div class="slider">
           <div class="slide-track">
             <div class="slide">
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/1.png" height="100" width="250" alt="" />
+              <img src="images/wireless-mouse-keyboard.jpg" height="100" width="250" alt="" />
             </div>
+            <!-- <div class="slide">
+              <img src="images/amazon-4695747-4695747%400.png" height="100" width="250" alt="" />
+            </div> -->
             <div class="slide">
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/2.png" height="100" width="250" alt="" />
+              <img src="images/amazon-4695747.png" height="100" width="250" alt="" />
             </div>
-            <div class="slide">
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/3.png" height="100" width="250" alt="" />
-            </div>
-            <div class="slide">
+            <!-- <div class="slide">
               <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/4.png" height="100" width="250" alt="" />
             </div>
             <div class="slide">
@@ -544,13 +547,15 @@
             </div>
             <div class="slide">
               <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/7.png" height="100" width="250" alt="" />
-            </div>
+            </div> -->
           </div>
         </div>
-        <h2 class="text-white">Get these exciting goodies!!</h2>
+       
       </div>
     </div>
 
+     <!-- Advantage section ends here -->
+   
     <section id="cta">
       <h3 class="cta-quote">
         <span class="yellow" style="font-size: 50px"> Open source </span>is
