--- a/register.html
+++ b/register.html
@@ -185,7 +185,7 @@
                         >
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-aos="fade-down" href="#timeline"
+                        <a class="nav-link" data-aos="fade-down" href="index.html#timeline"
                         >Schedule</a
                         >
                     </li>
