--- a/register.html
+++ b/register.html
@@ -287,7 +287,7 @@
                         </p>
                     </div>
                     <div class="event_date">
-                        Love You ❤
+                        Hurray!!!
                     </div>
                 </li>
                 </ul>
