added w*app alert message in google form tab

--- a/register.html
+++ b/register.html
@@ -238,6 +238,7 @@
                         <h6 class="text-dark" >Google Form</h6>👉 Visit the Google Form by clicking the "Enroll" button.<br/>
                         👉 Fill out the form with your basic information to express your interest.
                         </p>
+                        <h6 class="text-center text-danger">Don't forget to join the Whatsapp group after filling out the google form</h6>
                     </div>
                     <div class="event_date">
                         STEP -1
