added text in footer for webmasters

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                 </video>
               </div>
             </div>
-            <h4 class="text-center text-white mb-5">Date 20 Oct - 2023</h4>
+            <h4 class="text-center text-white mb-5">Date 20 Oct - 21 Oct 2023</h4>
           </div>
 
           <!-- Logo -->
@@ -622,7 +622,7 @@
       ></a>
       <br />
       <h3 class="mt-3">© Copyright 2023 PCCOE-ACM HacktoberFest</h3>
-      <h5 class="mt-3">Designed with ❤️ Webmasters ACM Student Chapter Pccoe , Pune</h5>
+      <h5 class="mt-3">Designed with ❤️ by Webmasters ACM Student Chapter Pccoe , Pune</h5>
     </footer>
 
 
