--- a/hackprojects.html
+++ b/hackprojects.html
@@ -641,7 +641,7 @@
       ></a>
       <br />
       <h3 class="mt-3">© Copyright 2023 PCCOE-ACM HacktoberFest</h3>
-      <h5 class="mt-3">Designed with ❤️ Webmasters ACM Student Chapter Pccoe , Pune</h5>
+      <h5 class="mt-3">Designed with ❤️ by Webmasters ACM Student Chapter Pccoe , Pune</h5>
     </footer>
     <script src="index.js"></script>
 
