--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
     <title>PCCOE-ACM - HacktoberFest-2023</title>
   </head>
 
-  <body oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
+  <body>
+    <!-- oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;" -->
     
     <section class="flash">
       <div id="poster" class="full-screen-poster">
@@ -205,7 +206,7 @@
 
       <div class="maincontainer">
               <div class="box1">
-                <div >
+                <div class="bts" >
                   <h2 >
                     Make a Mark in Open Source with<br />
                     PCCOE <span class="acm-pccoe">ACM</span>
