fixed registration page modified font-style and lot more

--- a/hackprojects.html
+++ b/hackprojects.html
@@ -71,7 +71,12 @@
     <title>Projects | PCCOE | ACM - HacktoberFest-2023</title>
   </head>
 
-  <body  oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;" >
+  <body  >
+    <!-- oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;" -->
+    <marquee class="text-white font-weight-bolder mb-3 " direction="left" style="font-size: large;" >  
+      ‼️ Registrations are started for Pccoe Acm Hacktoberfest 2023 &nbsp; |  ✨ Participate and win exciting goodies along with participation certificate!! &nbsp; |  Making you all ready for Upcoming GSOC - 2024 🚀 &nbsp; |
+      
+       </marquee>  
     <section id="title">
       <div class="container-fluid">
         <div id="confetti-wrapper">
@@ -167,7 +172,7 @@
             <ul class="navbar-nav mt-auto d-flex items-center justify-center">
               <li class="nav-item">
                 <a
-                  class="nav-link"
+                  class="nav-link register-btn "
                   href="index.html"
                   target="_blank"
                   data-aos=""
@@ -176,7 +181,7 @@
               </li>
               <li class="nav-item">
                 <a
-                  class="nav-link border:1px"
+                  class="nav-link border:1px register-btn "
                   href="https://hacktoberfest.com/participation/"
                   target="_blank"
                   data-aos=""
@@ -190,20 +195,20 @@
               </li> -->
               <li class="nav-item">
                 <a
-                  class="nav-link"
+                  class="nav-link register-btn"
                   data-aos="fade-down"
                   href="https://drive.google.com/file/d/1gF-YRQKARvq_ZPT05OnJMiqN4-XkExqa/view?usp=sharing"
                   target="_blank">Git Cheat Sheet</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-aos="fade-down" href="#Certificate">Certificate</a>
+                <a class="nav-link register-btn" data-aos="fade-down" href="#Certificate">Certificate</a>
               </li>
             </ul>
           </div>
         </nav>
         <h1 class="text-center text-decoration-none text-capitalize">
-          <a class="text-white" href="project.html"
+          <a class="text-white register-btn" href="project.html"
             >Projects Available for Contribution
           </a>
         </h1>
@@ -641,7 +646,7 @@
       ></a>
       <br />
       <h3 class="mt-3">© Copyright 2023 PCCOE-ACM HacktoberFest</h3>
-      <h5 class="mt-3">Designed with ❤️ by Webmasters ACM Student Chapter Pccoe , Pune</h5>
+      <h5 class="mt-3 register-btn ">Designed with ❤️ by Webmasters ACM Student Chapter Pccoe , Pune</h5>
     </footer>
     <script src="index.js"></script>
 
