--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
               Inaugration of Event by ACM-PCCOE
             </div>
             <div class="timeline__event__description">
-              <p>
+              <p style="font-size: 20px;">
                 ✨ Welcome to Hacktoberfest 2023! We're thrilled to have you
                 here 🚀 <br />Get ready for a day of learning, collaboration,
                 and coding fun 🧑🏻‍🏫
@@ -288,7 +288,7 @@
               Introduction to Hacktoberfest & Opensource
             </div>
             <div class="timeline__event__description">
-              <p>
+              <p style="font-size: 20px;">
                 👉 Learn about Hacktoberfest and why open source matters.<br />
                 👉 Discover how your contributions can make a difference.<br />
                 👉 Stay engaged, ask questions, and get ready to dive into the
@@ -310,7 +310,7 @@
               Workshop for Opensource Contribution
             </div>
             <div class="timeline__event__description">
-              <p>
+              <p style="font-size: 20px;">
                 👉 This workshop will guide you on how to make your first open
                 source contribution.<br />
                 👉 Follow the step-by-step instructions provided and don't be
@@ -345,7 +345,7 @@
               Opportunities to contribute
             </div>
             <div class="timeline__event__description">
-              <p>
+              <p style="font-size: 20px;">
                 👉 Explore diverse open source projects, including ACM-PCCOE
                 initiatives. <br />
                 👉 Projects suit all skill levels, spanning HTML, CSS,
@@ -372,7 +372,7 @@
               Breakout Rooms for Icebreaking
             </div>
             <div class="timeline__event__description">
-              <p>
+              <p style="font-size: 20px;">
                 👉 This is your chance to meet fellow participants.<br />
                 👉 Engage in discussions, share your interests, and make new
                 connections.<br />
@@ -395,7 +395,7 @@
               Get Hacking
             </div>
             <div class="timeline__event__description" style="color: #065f9f">
-              <p>
+              <p style="font-size: 20px;">
                 👉 Now it's time to put your skills to use.<br />
                 👉 Work on your selected open source project, and remember to
                 follow best practices.<br />
@@ -418,7 +418,7 @@
               Show and Tell
             </div>
             <div class="timeline__event__description">
-              <p>
+              <p style="font-size: 20px;">
                 👉 Share your achievements with the community.<br />
                 👉 Demonstrate what you've worked on and what you've learned.<br />
                 👉 It's time to celebrate your contributions and inspire others.
