--- a/hackprojects.html
+++ b/hackprojects.html
@@ -281,7 +281,7 @@
             <h3 class="text-white" id="starbucks_forks">00</h3>
           </div>
           <div class="pull cont">
-            <i class="fa-regular fa-code-pull-request fa-lg" style="color: #f0f2f5;"></i>
+            <i class="fa-solid fa-code-pull-request fa-lg" style="color: #f0f2f5;"></i>
           <h3 class="text-white" id="starbucks_prs">00</h3>
         </div>
         <div class="merged cont">
@@ -351,7 +351,7 @@
             <h3 class="text-white" id="pcccoeacmweb_forks">00</h3>
           </div>
           <div class="pull cont">
-            <i class="fa-regular fa-code-pull-request fa-lg" style="color: #f0f2f5;"></i>
+            <i class="fa-solid fa-code-pull-request fa-lg" style="color: #f0f2f5;"></i>
           <h3 class="text-white" id="pcccoeacmweb_prs">00</h3>
         </div>
         <div class="merged cont">
@@ -421,7 +421,7 @@
             <h3 class="text-white" id="travelwebsite_forks">00</h3>
           </div>
           <div class="pull cont">
-            <i class="fa-regular fa-code-pull-request fa-lg" style="color: #f0f2f5;"></i>
+            <i class="fa-solid fa-code-pull-request fa-lg" style="color: #f0f2f5;"></i>
           <h3 class="text-white" id="travelwebsite_prs">00</h3>
         </div>
         <div class="merged cont">
@@ -491,7 +491,7 @@
             <h3 class="text-white" id="esubmission_forks">00</h3>
           </div>
           <div class="pull cont">
-            <i class="fa-regular fa-code-pull-request fa-lg" style="color: #f0f2f5;"></i>
+            <i class="fa-solid fa-code-pull-request fa-lg" style="color: #f0f2f5;"></i>
           <h3 class="text-white" id="esubmission_prs">00</h3>
         </div>
         <div class="merged cont">
@@ -560,7 +560,7 @@
             <h3 class="text-white" id="dsa_forks">00</h3>
           </div>
           <div class="pull cont">
-            <i class="fa-regular fa-code-pull-request fa-lg" style="color: #f0f2f5;"></i>
+            <i class="fa-solid fa-code-pull-request fa-lg" style="color: #f0f2f5;"></i>
           <h3 class="text-white" id="dsa_prs">00</h3>
         </div>
         <div class="merged cont">
@@ -631,7 +631,7 @@
                 <h3 class="text-white" id="animated_forks">00</h3>
           </div>
           <div class="pull cont">
-            <i class="fa-regular fa-code-pull-request fa-lg" style="color: #f0f2f5;"></i>
+            <i class="fa-solid fa-code-pull-request fa-lg" style="color: #f0f2f5;"></i>
           <h3 class="text-white" id="animated_prs">00</h3>
         </div>
         <div class="merged cont">
