disabled the inspection from all pages

--- a/hackprojects.html
+++ b/hackprojects.html
@@ -77,8 +77,8 @@
     <title>Projects | PCCOE | ACM - HacktoberFest-2023</title>
   </head>
 
-    <!-- oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;"  -->
-  <body>
+   
+  <body oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
     <marquee class="text-white font-weight-bolder mb-3 " direction="left" style="font-size: large;" >  
       ‼️ Registrations are started for Pccoe Acm Hacktoberfest 2023 &nbsp; |  ✨ Participate and win exciting goodies along with participation certificate!! &nbsp; |  Making you all ready for Upcoming GSOC - 2024 🚀 &nbsp; |
       
