--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
     <title>PCCOE-ACM - HacktoberFest-2023</title>
   </head>
 
-  <body>
-    <!-- oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;" -->
+  <body oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
+    
     <marquee class="text-white font-weight-bolder mb-3 " direction="left" style="font-size: large;" >  
      ‼️ Registrations are started for Pccoe Acm Hacktoberfest 2023 &nbsp; |  ✨ Participate and win exciting goodies along with participation certificate!! &nbsp; |  Making you all ready for Upcoming GSOC - 2024 🚀 &nbsp; |
      
@@ -231,7 +231,7 @@
 
               <div class="box2">
                 <div class="Intro">
-                  <video width="400" height="250" autoplay controls>
+                  <video width="400" height="250" autoplay>
                     <source src="THIS OCTOBER.mp4" type="video/mp4" />
   
                     <!-- Your browser does not support the video tag. -->
