--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
               <div class="box2">
                 <div class="Intro">
-                  <video id="myvideo" width="400" height="250" autoplay>
+                  <video id="myvideo" width="400" height="250" autoplay controls>
                     <source src="THIS OCTOBER.mp4" type="video/mp4" />
   
                  
