--- a/index.html
+++ b/index.html
@@ -209,9 +209,7 @@
           </div>
         </nav>
 
-        <div class="cesa d-flex justify-content-center align-content-center ">
-            <img src="/images/CESA_WHITE.png" width="400" height="300" alt="Cesa_Pccoe">
-        </div>
+        
 
         <!-- Title -->
 
@@ -247,8 +245,41 @@
                   </video>
               </div>
       </div>
-    </div></section>
-
+    </div>
+  
+    <div class="cesa d-flex justify-content-center align-content-center ">
+      <img src="/images/CESA_WHITE.png" width="400" height="300" alt="Cesa_Pccoe">
+  </div></section>
+  
+  <!-- log -->
+  <div class="all">
+    <div class="acm">
+       <div class="logo mb-5">
+      <a href="index.html">
+        <img src="images/ACM.png" width="150" />
+        <span style="font-size: 1.3em; margin-right: 10px">
+          <img
+            id="logo2"
+            src="images/x.png"
+            alt="Logo"
+            width="70"
+            style="margin-left: 3px; margin-left: auto"
+            alt="x"
+          />
+        </span>
+        <img src="images/hf10_vert_fcd_cmyk.png" width="150" height="150" />
+      </a>
+      <br />
+      <!-- <img src="images/sponsors.png" width="300" /> -->
+    </div>
+    
+  </div>
+    <div class="gdsc">
+      <h2 class="text-white">In collaboration with  </h2>
+      <img src="images/gdscpccoe.png" width="400" />
+    </div>
+  
+</div>
     <!-- Timeline -->
 
     <section class="timeline" id="timeline">
