modified certificate flash image , goodies , intro video and added counter , added new projects into hacprojects

--- a/register.html
+++ b/register.html
@@ -322,9 +322,9 @@
  <!-- Qr code scanner poster -->
  <section class="qr_code d-flex align-content-center justify-content-center  ">
 
-     <div class="qrimg">
+     <!-- <div class="qrimg">
         <img src="/images/QR_Poster.png" alt="qr_poster" width="550" height="750px">
-     </div>
+     </div> -->
 
  </section>
  <!-- Qr code scanner poster ends here  -->
