Added api code for global stats

--- a/hackprojects.html
+++ b/hackprojects.html
@@ -78,7 +78,8 @@
     </head>
 
     
-    <body oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
+    <body>
+    <!-- oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;" -->
       <marquee class="text-white font-weight-bolder mb-3 " direction="left" style="font-size: large;" >  
         ‼️ Registrations are started for Pccoe Acm Hacktoberfest 2023 &nbsp; |  ✨ Participate and win exciting goodies along with participation certificate!! &nbsp; |  Making you all ready for Upcoming GSOC - 2024 🚀 &nbsp; |
         
@@ -1008,19 +1009,19 @@
         <div class="row ml-5">
           <div class="global-stats-row col-lg-4">
             <i class="icon fas fa-check-circle fa-4x"></i>
-            <h2>00</h2>
+            <h2 id="total_mprs">00</h2>
             <p>CHALLENGE COMPLETIONS</p>
           </div>
 
           <div class="global-stats-row col-lg-4">
             <i class="icon fas fa-check-circle fa-4x"></i>
-            <h2>00</h2>
+            <h2 id="total_prs">00</h2>
             <p>PULL REQUESTS OPENED</p>
           </div>
 
           <div class="global-stats-row col-lg-4">
             <i class="icon fas fa-check-circle fa-4x"></i>
-            <h2>00</h2>
+            <h2 id="no_of_repos">00</h2>
             <p>PARTICIPATING REPOSITORIES</p>
           </div>
         </div>
