replaced qr with h logo as the qr was expired

--- a/register.html
+++ b/register.html
@@ -231,7 +231,7 @@
                 <header>
                 
                     <figure>
-                        <img src="images/Customize_card_rgsitration.png" style="height: 192px;">
+                        <img src="images/hack.png" style="height: 192px;">
                     </figure>
                 
                 </header>
