Cleared the bugs in the api code for global stats

--- a/index.html
+++ b/index.html
@@ -616,25 +616,25 @@
     <!-- Global stats -->
 
     <section id="global-stats">
-      <h3 class="global-stats-header mb-5 global-one text-white">
+      <h3 class="global-stats-header mt-5 mb-3 global-one">
         Global stats for PCCOE - ACM | Hacktoberfest 2023
       </h3>
       <div class="row ml-5">
         <div class="global-stats-row col-lg-4">
           <i class="icon fas fa-check-circle fa-4x"></i>
-          <h2>00</h2>
+          <h2 id="total_mprs">00</h2>
           <p>CHALLENGE COMPLETIONS</p>
         </div>
 
         <div class="global-stats-row col-lg-4">
           <i class="icon fas fa-check-circle fa-4x"></i>
-          <h2>00</h2>
+          <h2 id="total_prs">00</h2>
           <p>PULL REQUESTS OPENED</p>
         </div>
 
         <div class="global-stats-row col-lg-4">
           <i class="icon fas fa-check-circle fa-4x"></i>
-          <h2>00</h2>
+          <h2 id="no_of_repos">00</h2>
           <p>PARTICIPATING REPOSITORIES</p>
         </div>
       </div>
