--- a/hackprojects.html
+++ b/hackprojects.html
@@ -1058,8 +1058,8 @@
         <h3 class="global-stats-header mt-5 mb-3 global-one">
           Global stats for PCCOE - ACM | Hacktoberfest 2023
         </h3>
-        <div class="row ml-5">
-          <div class="global-stats-row col-lg-4">
+        < class="row ml-5">
+          <div class="global-stats-row col-lg-4 ">
             <i class="icon fas fa-check-circle fa-4x"></i>
             <h2 id="total_mprs">00</h2>
             <p>CHALLENGE COMPLETIONS</p>
@@ -1077,30 +1077,7 @@
             <p>PARTICIPATING REPOSITORIES</p>
           </div>
 
-    <section id="global-stats">
-      <h3 class="global-stats-header mt-5 mb-3 global-one">
-        Global stats for PCCOE - ACM | Hacktoberfest 2023
-      </h3>
-      <div class="row ml-5">
-        <div class="global-stats-row col-lg-4">
-          <i class="icon fas fa-check-circle fa-4x"></i>
-          <h2 id="total_mprs">00</h2>
-          <p>CHALLENGE COMPLETIONS</p>
-        </div>
-
-        <div class="global-stats-row col-lg-4">
-          <i class="icon fas fa-check-circle fa-4x"></i>
-          <h2 id="total_prs">00</h2>
-          <p>PULL REQUESTS OPENED</p>
-        </div>
-
-        <div class="global-stats-row col-lg-4">
-          <i class="icon fas fa-check-circle fa-4x"></i>
-          <h2 id="no_of_repos">00</h2>
-          <p>PARTICIPATING REPOSITORIES</p>
-        </div>
-      </div>
-    </section>
+        </section>
 
     <!-- Global stats ends -->
 
