--- a/hackprojects.html
+++ b/hackprojects.html
@@ -911,7 +911,7 @@
     <h3 class="global-stats-header mt-5 mb-3 global-one">
       Global stats for PCCOE - ACM | Hacktoberfest 2023
     </h3>
-    < class="row ml-5">
+    <div class="row ml-5">
       <div class="global-stats-row col-lg-4 ">
         <i class="icon fas fa-check-circle fa-4x"></i>
         <h2 id="total_mprs">00</h2>
