modified timeline and updated marque tag

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <body>
     <!-- oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;" -->
     <marquee class="text-white font-weight-bolder mb-3 " direction="left" style="font-size: large;">
-      ‼️ Registrations are started for Pccoe Acm Hacktoberfest 2023 &nbsp; |
+      ‼️ Registrations will be closed by 6:30pm on 25th october for Pccoe Acm Hacktoberfest 2023 &nbsp; |
       Tentative Dates 23 Oct to 28 Oct 2023 | ✨ Participate and win exciting goodies along with participation
       certificate!! &nbsp; | Making you all ready for Upcoming GSOC - 2024 🚀 &nbsp; |
     </marquee>
@@ -218,24 +218,6 @@
       <div class="timeline">
         <!-- welcome card -->
 
-        <div class="timeline__event c1">
-          <div class="timeline__event__icon">
-            <i class="lni-cake"></i>
-          </div>
-          <div class="timeline__event__date">9:00 AM to 9:15 AM</div>
-          <div class="timeline__event__content">
-            <div class="timeline__event__title time-title text-center mb-2" style="color: #065f9f">
-              Inaugration of Event by ACM-PCCOE
-            </div>
-            <div class="timeline__event__description">
-              <p>
-                ✨ Welcome to Hacktoberfest 2023! We're thrilled to have you
-                here 🚀 <br />Get ready for a day of learning, collaboration,
-                and coding fun 🧑🏻‍🏫
-              </p>
-            </div>
-          </div>
-        </div>
 
         <div class="timeline__event c2">
           <div class="timeline__event__icon">
@@ -251,7 +233,7 @@
               Introduction to <b>GSOC</b>  & Opensource
             </div>
             <div class="timeline__event__title text-center mb-2" style="color: #065f9f">
-              9:20 AM to 11:30 AM
+              10:00 AM to 12:00 PM
 
             </div>
             <div class="timeline__event__description">
@@ -262,7 +244,16 @@
                 👉 Stay engaged, ask questions, and get ready to dive into the
                 world of open source. <br />
                 👉 Gain insights into the benefits of collaborating with a global community of developers through open source projects.
+               
 
+                <div class="d-flex justify-content-center align-content-center">
+                  <a href="https://gdsc.community.dev/events/details/developer-student-clubs-pimpri-chinchwad-college-of-engineering-pune-presents-roadmap-to-crack-gsoc-2024/purchased/e6af2a77cb924434bde5da7836245905" target="_blank">
+                    <button type="button"
+                      class="btn mb-4 btn-lg gsoc-btn download-button  animate__animated animate__backInLeft border-bottom">
+                      Register Now 
+                    </button>
+                  </a>
+                </div>
 
 
 
@@ -271,12 +262,34 @@
             </div>
           </div>
         </div>
+        <div class="timeline__event c1">
+          <div class="timeline__event__icon">
+            <i class="lni-cake"></i>
+          </div>
+          <div class="timeline__event__date">2:00 PM to 2:30 PM</div>
+          <div class="timeline__event__content">
+            <div class="timeline__event__title time-title text-center mb-2" style="color: #065f9f">
+              Inaugration of Event by ACM-PCCOE
+            </div>
+            <div class="timeline__event__description">
+              <p>
+                ✨ Welcome to Hacktoberfest 2023! We're thrilled to have you
+                here 🚀 <br />Get ready for a day of learning, collaboration,
+                and coding fun 🧑🏻‍🏫
+              </p>
+            </div>
+          </div>
+        </div>
+
+      
+
+
         <div class="timeline__event c3">
           <div class="timeline__event__icon">
             <i class="lni-slim"></i>
           </div>
           <div class="timeline__event__date d-flex flex-column ">
-            <h3>2:00 PM to 5:00 PM</h3>
+            <h3>2:30 PM to 5:00 PM</h3>
 
             <h4 class="text-center text-white">Location : 6221 and 6222</h4>
 
@@ -337,7 +350,7 @@
           </div>
         </div>
 
-        <div class="timeline__event c5">
+        <!-- <div class="timeline__event c5">
           <div class="timeline__event__icon">
             <i class="lni-cake"></i>
           </div>
@@ -356,7 +369,7 @@
               </p>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="timeline__event c6">
           <div class="timeline__event__icon">
             <i class="lni-cake"></i>
