disabled the register button

--- a/index.html
+++ b/index.html
@@ -155,12 +155,13 @@
                 <span class="hacto-pccoe">Hacktoberfest 2023</span>
               </h2>
 
-              <a href="register.html">
-                <button type="button"
-                  class="btn register-btn mb-4 btn-lg download-button btndesign animate__animated animate__backInLeft">
+              <a href="">
+                <button type="button" disabled
+                  class="btn  register-btn mb-4 btn-lg download-button btndesign animate__animated animate__backInLeft">
                   REGISTER NOW 🚀
                 </button>
               </a>
+              <h3 class="text-danger text-center" >Registrations for Pccoe Acm Hacktoberfest are closed now !</h3>
             </div>
 
           </div>
