--- a/project.html
+++ b/project.html
@@ -176,7 +176,7 @@
           <div class="unkonown">
             <h2 class="text-center" style="color:#ecf32a">
               <div class="typewriter">
-                <h2>We're Coming Soon...</h2>
+                <h2>See you tommorow at the event...</h2>
               </div>
 
             </h2>
@@ -189,12 +189,8 @@
 
 
           <!-- <a href="#" class="btn1">Subscribe</a> -->
-          <a href="register.html">
-            <button type="button"
-              class="btn mb-4 register-btn btn-lg download-button btndesign animate__animated animate__backInLeft ">
-              REGISTER NOW 🚀
-            </button>
-            <h1>Stay tuned for a remarkable experience!</h1>
+         
+            <h1 class="mt-5" >Stay tuned for a remarkable experience!</h1>
 
         </div> <!-- content ends -->
       </div> <!-- wrapper ends -->
